--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
-name: screen_adaptive_plus
+name: adaptive_plus
 description: A new Flutter package project.
 version: 1.0.0
 environment:
-  sdk: ">=3.6.1 <4.0.0"
+  sdk: ">=3.8.1 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
