--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: screen_adaptive_plus
 description: A new Flutter package project.
 version: 1.0.0
 environment:
-  sdk: ">=3.6.1 <4.0.0"
+  sdk: ^3.9.2
 
 dependencies:
   flutter:
@@ -11,4 +11,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
